Add settings' cases and repos
